# gh-inspector

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  e2e.yml  lint-commits.yml  publish.yml  release-please-checks.yml  release-please.yml  scorecard.yml
gh_inspector/src/: cache.py  github_client.py  main.py  output.py  scanner.py
gh_inspector/src/commands/: find_codeowners.py  find_licenses.py  find_python_library.py  find_python_version.py
gh_inspector/src/commands/find_codeowners/: __init__.py
gh_inspector/src/commands/find_python_library/: __init__.py
gh_inspector/src/commands/find_python_library/parsers/: __init__.py  pipfile_lock.py  poetry_lock.py  requirements.py  setup_cfg.py  uv_lock.py
gh_inspector/src/commands/find_python_version/: __init__.py
gh_inspector/src/commands/find_python_version/extractors/: __init__.py  category.py  (+8 more)
gh_inspector/tests/: conftest.py  test_cache.py  test_cache_command.py  test_find_python_library.py  test_github_client.py  test_main.py  test_output.py
gh_inspector/tests/find_codeowners/: test_find_codeowners.py  test_snapshots.py
gh_inspector/tests/find_codeowners/__snapshots__/: test_snapshots.ambr
gh_inspector/tests/find_licenses/: test_find_licenses.py  test_snapshots.py
gh_inspector/tests/find_licenses/__snapshots__/: test_snapshots.ambr
gh_inspector/tests/find_python_library/: test_find_python_library.py  test_snapshots.py
gh_inspector/tests/find_python_library/__snapshots__/: test_snapshots.ambr
gh_inspector/tests/find_python_library/fixtures/: requirements.in  requirements.txt  setup.cfg
gh_inspector/tests/find_python_version/: test_find_python_version.py  test_snapshots.py
gh_inspector/tests/find_python_version/__snapshots__/: test_snapshots.ambr
scripts/: check_uv_lock.sh
